# cortex-terminal

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: audit-report-2026-03-24.md  launch-plan.md  launch-posts.html  roadmap-v2.md  sentinel-plan.md  terminal-research-2026-03-24.md
src/: App.tsx  constants.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc_server.rs  lib.rs  pty.rs  types.rs
src-tauri/src/ai/: brain.rs  budget.rs  config.rs  database.rs  mcp.rs  mod.rs  providers.rs  registry.rs  router.rs  types.rs  verification.rs
src-tauri/src/commands/: ai_commands.rs  chat_commands.rs  mod.rs  pty_commands.rs  status_commands.rs
src/ai/: constants.ts  formatter.ts  thinking.ts
src/components/: AiTabTerminal.tsx  CommandPalette.tsx  PaneLayout.tsx  PasteHistory.tsx  ProjectLauncher.tsx  SearchBar.tsx  SplitPaneLayout.tsx  StatusBar.tsx  TabBar.tsx  TabTerminal.tsx  TerminalPane.tsx  TerminalView.tsx  TitleBar.tsx  Toast.tsx
src/components/ai/: AiChatInput.tsx  AiChatView.tsx  AiMessage.tsx  AiThinkingIndicator.tsx  MarkdownSidebar.tsx
src/components/settings/: AboutTab.tsx  BudgetTab.tsx  McpTab.tsx  ModelsTab.tsx  PermissionsTab.tsx  ProvidersTab.tsx  (+2 more)
src/hooks/: useAiInput.ts  useAiStream.ts  useAiTerminal.ts  useHomeDir.ts  useKeyboard.ts  usePasteHistory.ts  useStatusPoll.ts  useTabs.ts  useTerminal.ts
src/styles/: globals.css
