[package]
name = "cortex"
version = "0.1.0"
description = "Terminal workspace for Claude Code sessions"
authors = ["Orel"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
anyhow = "1.0"
thiserror = "2"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
